# Frog_Animator

./: .gitignore  README.md  electron.vite.config.ts  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  tsconfig.renderer.json  vite.config.ts
docs/: PRD.md  architecture.md
scripts/: smoke.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: .gitkeep
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  export.rs  fs_atomic.rs  lib.rs  main.rs  watch.rs
src/audio/: context.ts  decode.ts  runtime.ts  transport.ts  waveform.ts
src/export/: driver.ts  rasterize.ts
src/ipc/: tauri.ts
src/main/: index.ts
src/model/: migrate.ts  schema.ts  types.ts
src/panels/: AudioPanel.tsx  ExportDialog.tsx  FileMenu.tsx  LayerTree.tsx  ProjectSettings.tsx  Properties.tsx  RigMode.tsx  Stage.tsx  Timeline.tsx  Transport.tsx  Wardrobe.tsx
src/preload/: index.ts
src/project/: autosave.ts  importAsset.ts  importAudio.ts  open.ts  preload.ts  save.ts  serialize.ts
src/render/: builtin.ts  cameraControls.ts  hotReload.ts  onion.ts  stage.ts  textureCache.ts
src/renderer/: index.html  main.tsx
src/renderer/app/: App.tsx  EditorShell.tsx  TopBar.tsx  UnsupportedScreen.tsx  styles.css
src/renderer/domain/: easing.ts  factories.ts  sampleTrack.ts  types.ts
src/rig/: compose.ts  dragMath.ts  resolve.ts
src/shared/: ipc.ts
src/state/: frameClipboard.ts  history.ts  playback.ts  selectors.ts  store.ts
src/types/: shims.d.ts
(+9 files in other folders)
