[package]
name = "frog-animator"
version = "0.0.1"
description = "Frog Animator - frame-by-frame rigged 2D animation"
authors = ["Frog Animator contributors"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "frog_animator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
notify = "6"
notify-debouncer-full = "0.3"
tokio = { version = "1", features = ["full"] }

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
incremental = false
